[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[tool.setuptools.dynamic]
version = {attr = "enlyze._version.VERSION"}

[project]
name = "enlyze"
description = "Python SDK for interacting with the ENLYZE platform https://www.enlyze.com"
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "ENLYZE GmbH", email = "hello@enlyze.com"},]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  'version',
]
dependencies = [
  "httpx",
  "pandas>=2",
  "pydantic>=2",
]
[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinxcontrib-spelling",
]
lint = [
  "bandit",
  "black",
  "flake8",
  "isort",
  "mypy",
  "pyproject-fmt",
  "safety",
  "tox-ini-fmt",
]
test = [
  "coverage",
  "hypothesis",
  "pandas-stubs",
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "pytest-sugar",
  "pytest-xdist",
  "respx",
]

[tool.mypy]
exclude="tests"

[tool.isort]
profile = "black"
